Social system refactor (#5419)
---------

Co-authored-by: Floweynt <50057682+Floweynt@users.noreply.github.com>