@@ -1,18 +1,18 @@
 package com.playmonumenta.plugins.social;
 
+import com.playmonumenta.plugins.Plugin;
 import com.playmonumenta.plugins.guis.Gui;
 import com.playmonumenta.plugins.guis.GuiItem;
-import com.playmonumenta.plugins.social.SocialManager.SocialInfo;
-import com.playmonumenta.plugins.social.SocialManager.SocialInfo.Friend;
+import com.playmonumenta.plugins.social.PlayerSocialDisplayInfo.Friend;
 import com.playmonumenta.plugins.utils.GUIUtils;
+import com.playmonumenta.plugins.utils.ItemUtils;
 import com.playmonumenta.plugins.utils.MMLog;
 import com.playmonumenta.plugins.utils.MessagingUtils;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Objects;
 import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import net.kyori.adventure.text.format.TextDecoration;
@@ -26,18 +26,23 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 public class FriendListGui extends Gui {
-	private static final ArrayList<Integer> GUI_LOCATIONS = new ArrayList<>(Arrays.asList(19, 20, 21, 22, 23, 24, 25, 28, 29, 30, 31, 32, 33, 34, 37, 38, 39, 40, 41, 42, 43));
-	private GuiMode mGuiMode = GuiMode.LIST_MODE;
-	private int mTotalPages;
-	private int mCurrentPage = 1;
-	private @Nullable Friend mSelectedFriend = null;
+	private static final List<Integer> GUI_LOCATIONS = List.of(
+		19, 20, 21, 22, 23, 24, 25,
+		28, 29, 30, 31, 32, 33, 34,
+		37, 38, 39, 40, 41, 42, 43
+	);
 
 	private final Player mViewer;
 	private final boolean mIsSelf;
 	private final String mPlayerName;
 	private final UUID mPlayerUuid;
-	private final SocialInfo mPlayerSocialInfo;
-	private final ArrayList<Friend> mFriendsList = new ArrayList<>();
+	private final PlayerSocialDisplayInfo mPlayerSocialDisplayInfo;
+	private final List<Friend> mFriendList = new ArrayList<>();
+
+	private GuiMode mGuiMode = GuiMode.LIST_MODE;
+	private int mTotalPages;
+	private int mCurrentPage = 1;
+	private @Nullable Friend mSelectedFriend = null;
 
 	private enum GuiMode {
 		LIST_MODE,
@@ -45,19 +50,28 @@ public class FriendListGui extends Gui {
 		REMOVAL_CONFIRMATION_MODE
 	}
 
-	public FriendListGui(Player viewer, String playerName, UUID playerUuid, SocialInfo playerSocialInfo) {
+	public FriendListGui(Player viewer, String playerName, UUID playerUuid, PlayerSocialDisplayInfo playerSocialDisplayInfo) {
 		super(viewer, 6 * 9, "Friend List");
+
 		mViewer = viewer;
-		mIsSelf = mViewer.getUniqueId().equals(playerUuid);
+		mIsSelf = viewer.getUniqueId().equals(playerUuid);
 		mPlayerName = playerName;
 		mPlayerUuid = playerUuid;
-		mPlayerSocialInfo = playerSocialInfo;
+		mPlayerSocialDisplayInfo = playerSocialDisplayInfo;
 
-		populateFriendsList();
+		populateFriendList();
 	}
 
-	private void refreshData() {
-		SocialManager.getSocialInfo(mPlayerUuid).thenCompose(SocialInfo::populateNamesAndHeads).whenComplete((playerSocialInfo, throwable) -> {
+	private void populateFriendList() {
+		mFriendList.clear();
+
+		mPlayerSocialDisplayInfo.mFriendMap.values().stream()
+			.sorted(Comparator.comparing((Friend friend) -> friend.mFriendName == null ? "" : friend.mFriendName, String.CASE_INSENSITIVE_ORDER))
+			.forEach(mFriendList::add);
+	}
+
+	private CompletableFuture<PlayerSocialDisplayInfo> refreshData() {
+		return SocialManager.getSocialDisplayInfo(mPlayerUuid).whenCompleteAsync((playerSocialDisplayInfo, throwable) -> {
 			if (throwable != null) {
 				MMLog.severe("Caught exception trying to list friends for player " + mPlayerName + " : " + throwable.getMessage());
 				mViewer.sendMessage(Component.text("An error occurred while trying to list friends. Please report this: " + throwable.getMessage(), NamedTextColor.RED));
@@ -66,20 +80,12 @@ public class FriendListGui extends Gui {
 				return;
 			}
 
-			mPlayerSocialInfo.mFriendMap.keySet().retainAll(playerSocialInfo.mFriendMap.keySet());
-			mPlayerSocialInfo.mFriendMap.putAll(playerSocialInfo.mFriendMap);
-
-			mFriendsList.clear();
-			populateFriendsList();
+			mPlayerSocialDisplayInfo.mFriendMap.keySet().retainAll(playerSocialDisplayInfo.mFriendMap.keySet());
+			mPlayerSocialDisplayInfo.mFriendMap.putAll(playerSocialDisplayInfo.mFriendMap);
+			populateFriendList();
 
 			update();
-		});
-	}
-
-	private void populateFriendsList() {
-		mPlayerSocialInfo.mFriendMap.values().stream()
-			.sorted(Comparator.comparing((Friend friend) -> friend.mFriendName == null ? "" : friend.mFriendName, String.CASE_INSENSITIVE_ORDER))
-			.forEach(mFriendsList::add);
+		}, runnable -> Bukkit.getScheduler().runTask(Plugin.getInstance(), runnable));
 	}
 
 	@Override
@@ -106,20 +112,20 @@ public class FriendListGui extends Gui {
 	}
 
 	private void setLayout(GuiMode guiMode) {
-		mTotalPages = (int) Math.ceil((double) mFriendsList.size() / (double) GUI_LOCATIONS.size());
+		mTotalPages = (int) Math.ceil((double) mFriendList.size() / (double) GUI_LOCATIONS.size());
 		int pageOffset = (mCurrentPage - 1) * GUI_LOCATIONS.size();
 
 		createInfoHead();
 		createControlButtons();
 
-		if (mFriendsList.isEmpty()) {
+		if (mFriendList.isEmpty()) {
 			setItem(31, new GuiItem(GUIUtils.createBasicItem(Material.BARRIER, (mIsSelf ? "You have " : mPlayerName + " has ") + "no friends added!", NamedTextColor.RED)));
 			return;
 		}
 
 		for (int i = 0; i < GUI_LOCATIONS.size(); i++) {
-			if (i + pageOffset < mFriendsList.size()) {
-				Friend friend = mFriendsList.get(i + pageOffset);
+			if (i + pageOffset < mFriendList.size()) {
+				Friend friend = mFriendList.get(i + pageOffset);
 				GuiItem friendSkull = new GuiItem(createHead(friend));
 
 				if (guiMode == GuiMode.REMOVAL_MODE) {
@@ -149,14 +155,23 @@ public class FriendListGui extends Gui {
 			});
 
 		setItem(32, new GuiItem(GUIUtils.createBasicItem(Material.GREEN_CONCRETE, "Confirm Removal", NamedTextColor.WHITE, false, "Click here to remove " + selectedFriendName + " as " + (mIsSelf ? "your " : mPlayerName + "'s ") + "friend.", NamedTextColor.LIGHT_PURPLE)))
-			.onClick(event -> {
-				SocialManager.removeFriend((mIsSelf ? null : mViewer), mPlayerUuid, selectedFriendUuid);
-				refreshData();
+			.onClick(event ->
+				SocialManager.removeFriend((mIsSelf ? null : mViewer), mPlayerUuid, selectedFriendUuid)
+					.thenCompose(v -> refreshData())
+					.whenCompleteAsync((result, throwable) -> {
+						if (throwable != null) {
+							MMLog.severe("Caught exception trying to remove " + selectedFriendName + " as " + mPlayerName + "'s friend : " + throwable.getMessage());
+							mViewer.sendMessage(Component.text("An error occurred while trying to remove this player as a friend. Please report this: " + throwable.getMessage(), NamedTextColor.RED));
+							MessagingUtils.sendStackTrace(mViewer, throwable);
+							close();
+							return;
+						}
 
-				mGuiMode = GuiMode.REMOVAL_MODE;
-				mSelectedFriend = null;
-				update();
-			});
+						mGuiMode = GuiMode.REMOVAL_MODE;
+						mSelectedFriend = null;
+						update();
+					}, runnable -> Bukkit.getScheduler().runTask(Plugin.getInstance(), runnable))
+			);
 	}
 
 	private void createInfoHead() {
@@ -166,7 +181,7 @@ public class FriendListGui extends Gui {
 
 		skullMeta.setPlayerProfile(Bukkit.createProfile(mPlayerUuid));
 		skullMeta.displayName(Component.text((mIsSelf ? "Your " : mPlayerName + "'s ") + "Friends", NamedTextColor.WHITE).decoration(TextDecoration.ITALIC, false));
-		loreBuilder.add(Component.text((mIsSelf ? "You have " : mPlayerName + " has ") + mFriendsList.size() + " friend" + (mFriendsList.size() == 1 ? "" : "s") + " added.", NamedTextColor.LIGHT_PURPLE).decoration(TextDecoration.ITALIC, false));
+		loreBuilder.add(Component.text((mIsSelf ? "You have " : mPlayerName + " has ") + mFriendList.size() + " friend" + (mFriendList.size() == 1 ? "" : "s") + " added.", NamedTextColor.LIGHT_PURPLE).decoration(TextDecoration.ITALIC, false));
 		skullMeta.lore(loreBuilder);
 		skullMeta.addItemFlags(ItemFlag.HIDE_ATTRIBUTES);
 		infoHead.setItemMeta(skullMeta);
@@ -209,6 +224,17 @@ public class FriendListGui extends Gui {
 	}
 
 	private ItemStack createHead(Friend friend) {
-		return Objects.requireNonNullElseGet(friend.mFriendHead, () -> new ItemStack(Material.PLAYER_HEAD, 1));
+		ItemStack head = ItemUtils.createPlayerHead(friend.mFriendUuid, friend.mFriendName);
+		SkullMeta meta = (SkullMeta) head.getItemMeta();
+
+		meta.displayName(Component.text(friend.mFriendName, NamedTextColor.WHITE).decoration(TextDecoration.ITALIC, false));
+		meta.lore(List.of(
+			Component.text("Friends since:", NamedTextColor.LIGHT_PURPLE).decoration(TextDecoration.ITALIC, false),
+			Component.text(SocialManager.formatTimestamp(friend.mFriendTimestamp), NamedTextColor.LIGHT_PURPLE).decoration(TextDecoration.ITALIC, false)
+		));
+		meta.addItemFlags(ItemFlag.HIDE_ATTRIBUTES);
+		head.setItemMeta(meta);
+
+		return head;
 	}
 }
